--- a/public/package.json
+++ b/public/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "cis-api",
+  "name": "cis-ui",
   "version": "0.0.1",
-  "description": "Crops in Silico API Server",
-  "main": "server.js",
+  "description": "Crops in Silico User Interface",
+  "main": "app.js",
   "scripts": {
-    "start": "node apiserver.js",
-    "prestart": "npm install && cd public && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +16,13 @@
     "url": "https://github.com/bodom0015/cis-ui/issues"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "angular": "^1.5.11",
+    "angular-drag-drop": "^3.1.0",
+    "angular-local-storage": "^0.7.1",
+    "angular-slider": "^0.2.3",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "gojs": "^1.7.26",
+    "jquery": "^3.2.1"
   }
 }
