--- a/public/package.json
+++ b/public/package.json
@@ -25,5 +25,17 @@
     "jquery": "^3.2.1",
     "ngreact": "^0.5.1",
     "the-graph": "^0.10.3"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-csslint": "^2.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-express-server": "^0.5.3",
+    "grunt-karma": "^2.0.0",
+    "grunt-protractor-runner": "^5.0.0",
+    "grunt-swagger-js-codegen": "^0.4.6",
+    "karma": "^1.7.1",
+    "load-grunt-tasks": "^3.5.2",
+    "time-grunt": "^1.4.0"
   }
 }
