--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "cis-api",
+  "name": "cis-ui",
   "version": "0.0.1",
-  "description": "Crops in Silico API Server",
-  "main": "server.js",
+  "description": "Crops in Silico User Interface",
+  "main": "app.js",
   "scripts": {
-    "start": "node apiserver.js",
-    "prestart": "npm install && cd public && npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +16,23 @@
     "url": "https://github.com/bodom0015/cis-ui/issues"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "angular": "~1.5.11",
+    "angular-slider": "^0.2.3",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "ngreact": "^0.5.1",
+    "the-graph": "^0.10.3"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-csslint": "^2.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-karma": "^2.0.0",
+    "grunt-protractor-runner": "^5.0.0",
+    "grunt-swagger-js-codegen": "^0.4.6",
+    "karma": "^1.7.1",
+    "load-grunt-tasks": "^3.5.2",
+    "time-grunt": "^1.4.0"
   }
 }
