Checkpoint: save/export/submit/edit all appear to be working

--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   },
   "dependencies": {
     "angular": "1.5.11",
+    "angular-clipboard": "^1.4.2",
+    "angular-messages": "1.5.11",
     "angular-route": "1.5.11",
     "angular-slider": "0.2.3",
+    "angular-ui-bootstrap": "~1.2.4",
     "bootstrap": "3.3.7",
     "font-awesome": "4.7.0",
+    "font-awesome-animation": "^0.2.0",
     "jquery": "3.2.1",
+    "js-yaml": "^3.10.0",
+    "lodash": "^4.17.5",
     "ngreact": "0.5.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
