--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "angular": "1.5.11",
+    "angular-cache-buster": "^0.4.3",
     "angular-clipboard": "^1.4.2",
     "angular-cookies": "1.5.11",
     "angular-messages": "1.5.11",
