--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cis-ui",
   "version": "0.0.1",
   "description": "Crops in Silico User Interface",
-  "main": "app.js",
+  "main": "cis.module.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cd node_modules/the-graph && npm install && grunt build && cd ../.. && grunt"
